<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <!-- 显示区 -->
    <ScrollView
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/white" >

        <LinearLayout
            android:id="@+id/ll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:orientation="vertical" >
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/white"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/layout_bg">
            <Button
                android:id="@+id/btn_open"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:text="@string/open_device"
                android:textColor="@color/white"
                android:textSize="10sp"/>
            <Button
                android:id="@+id/btn_close"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:text="@string/close_device"
                android:textColor="@color/white"
                android:textSize="10sp"/>
            <Button
                android:id="@+id/btn_beep"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:text="@string/posBeep"
                android:textColor="@color/white"
                android:textSize="10sp"/>
            <Button
                android:id="@+id/btn_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:text="@string/clear"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>
        <!-- M1 -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="120dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:text="@string/secNr"
                    android:textColor="@color/skyBlue"
                    android:textSize="10sp" />

                <Spinner
                    android:id="@+id/spSector"
                    android:layout_width="80dp"
                    android:layout_height="match_parent" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/addr"
                    android:textColor="@color/skyBlue"
                    android:textSize="10sp" />

                <Spinner
                    android:id="@+id/spAddress"
                    android:layout_width="80dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:text="@string/key"
                    android:textColor="@color/skyBlue"
                    android:textSize="10sp" />

                <EditText
                    android:id="@+id/etKey"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="@string/pwd"
                    android:textSize="10sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:text="@string/data_to_be_written"
                    android:textColor="@color/skyBlue"
                    android:textSize="10sp" />

                <EditText
                    android:id="@+id/etData"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="@string/data_m1"
                    android:textSize="10sp"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">
                <Button
                    android:id="@+id/btn_m1read"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:text="@string/readCard_M1"
                    android:textColor="@color/white"
                    android:textSize="10sp" />

                <Button
                    android:id="@+id/btn_m1write"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:text="@string/writeCard_M1"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:text="@string/track"
                    android:textColor="@color/skyBlue"
                    android:textSize="10sp" />

                <EditText
                    android:id="@+id/etTrack"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="2"
                    android:textSize="10sp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:text="@string/timeout"
                    android:textColor="@color/skyBlue"
                    android:textSize="10sp" />

                <EditText
                    android:id="@+id/etTimeout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:text="12"
                    android:textSize="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp">

                <Button
                    android:id="@+id/btn_readMagCard"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:text="@string/readMagCard"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
                <Button
                    android:id="@+id/btn_QRCode"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:text="@string/qrcode"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
                <Button
                    android:id="@+id/btn_15693"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:background="@drawable/btn_bg"
                    android:text="@string/rfid"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </LinearLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical" >
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/layout_bg"
            android:orientation="horizontal" >
            <Button
                android:id="@+id/btn_sicard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:text="@string/siCard"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btn_certCard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:text="@string/CertCard"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btn_bankCard"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:text="@string/bankCard"
                android:textColor="@color/white"
                android:textSize="10sp" />

            <Button
                android:id="@+id/btn_certCardID"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:text="@string/CertCardID"
                android:textColor="@color/white"
                android:textSize="10sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/layout_bg"
            android:orientation="horizontal" >"

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:text="语音类型:"
                android:textColor="@color/skyBlue"
                android:textSize="10sp" />
            <Spinner
                android:id="@+id/spSound"
                android:layout_width="wrap_content"
                android:layout_height="match_parent" />
            <Button
                android:id="@+id/btn_getInputpass"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"

                android:layout_margin="5dp"
                android:background="@drawable/btn_bg"
                android:text="获取密码"
                android:textColor="#FFFFFF"
                android:textSize="10sp" />
        </LinearLayout>

        <!--
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:background="@drawable/layout_bg"
            android:orientation="vertical" >
        </LinearLayout>
        -->
    </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>